# radio-android

./: .gitignore  .gitmodules  CLAUDE.md  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  projectm_jni.cpp
app/src/main/java/io/rg2/radio/: MainActivity.kt  RadioApp.kt
app/src/main/java/io/rg2/radio/audio/: AudioTapHub.kt  DuckController.kt  StereoLevelTap.kt  TalkMusicClassifier.kt
app/src/main/java/io/rg2/radio/data/: Dtos.kt  Favorites.kt  RadioApi.kt  RadioSettings.kt  ScannerModels.kt  ScannerRepository.kt  TrackInfo.kt
app/src/main/java/io/rg2/radio/playback/: LiveStreamPlayer.kt  PlaybackService.kt
app/src/main/java/io/rg2/radio/ui/: NowPlayingScreen.kt  NowPlayingViewModel.kt  ScannerScreen.kt  ScannerViewModel.kt  Visualizers.kt
app/src/main/java/io/rg2/radio/viz/: MilkdropVisualizer.kt  ProjectMNative.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  themes.xml
app/src/main/res/xml/: automotive_app_desc.xml
core/: build.gradle.kts
core/src/main/java/io/rg2/radio/data/: ArtworkRepository.kt  Dtos.kt  Favorites.kt  Network.kt  NowPlayingRepository.kt  RadioApi.kt  RadioSettings.kt  ScannerApi.kt  TrackInfo.kt
docs/: api.md  web-visualizer.md
gradle/: libs.versions.toml
wear/: build.gradle.kts  proguard-rules.pro
wear/src/main/: AndroidManifest.xml
wear/src/main/res/drawable/: ic_launcher.xml
wear/src/main/res/values/: strings.xml  themes.xml
(+9 files in other folders)
